--- a/BasketKata.Tests/BasketKata.Tests.csproj
+++ b/BasketKata.Tests/BasketKata.Tests.csproj
@@ -49,7 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BasketShould.cs" />
+    <Compile Include="WhenITotalTheBasketThen.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
