--- a/BasketKata/BasketKata.csproj
+++ b/BasketKata/BasketKata.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Gbp.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RunningTotal.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
