Refactor: Extract interface for all rules
I've decided to stick with the `I` prefix as this is a familiar (if regrettable) convention in C#

--- a/BasketKata/BasketKata.csproj
+++ b/BasketKata/BasketKata.csproj
@@ -45,6 +45,7 @@
     <Compile Include="BreadRule.cs" />
     <Compile Include="ButterRule.cs" />
     <Compile Include="Gbp.cs" />
+    <Compile Include="IPricingRule.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="MilkRule.cs" />
     <Compile Include="MultiMilkRule.cs" />
