--- a/BasketKata/BasketKata.csproj
+++ b/BasketKata/BasketKata.csproj
@@ -42,12 +42,10 @@
   <ItemGroup>
     <Compile Include="Basket.cs" />
     <Compile Include="BreadAndButterRule.cs" />
-    <Compile Include="BreadRule.cs" />
-    <Compile Include="ButterRule.cs" />
     <Compile Include="Gbp.cs" />
     <Compile Include="IPricingRule.cs" />
     <Compile Include="Item.cs" />
-    <Compile Include="MilkRule.cs" />
+    <Compile Include="SingleItemRule.cs" />
     <Compile Include="MultiMilkRule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemainingBasket.cs" />
